--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 *, *::before, *::after {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-}
-
-html {
     background-size: cover;
     background-attachment: fixed;
     background-position: bottom center;
-    background-image: url("./pics/construction.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./pics/construction.jpg");
+}
+
+html {
     background-color: black;
     overflow-x: hidden;
     width: 100%;
@@ -23,8 +23,8 @@ body {
     text-align: center;
     padding: 2rem 2rem 1rem 2rem;
     align-content: center;
-    width: 30rem;
-    height: 13rem;
+    width: fit-content;
+    height: fit-content;
     margin-top: 15vh;
     border: 1px solid lime;
     background-color: rgba(0, 0, 0, 0.5);
