--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
     width: fit-content;
     max-width: 90vw;
     height: fit-content;
-    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 #welcome>figure>h1 {
@@ -52,13 +51,13 @@ body {
 .fadeIn3 {
     transition: all 2s ease-in-out;
     opacity: 0;
-    color: lime;
+    color: white;
     font-size: 0rem;
 }
 
 .fadeIn1.show {
     margin-top: 15vh;
-    border: 3px solid lime;
+    border: 1px solid lime;
     opacity: 1;
 }
 .fadeIn2.show {
@@ -68,8 +67,8 @@ body {
 .fadeIn3.show {
     opacity: 1;
     font-size: 100%;
-    color: cyan;
-    /* transform: scale(1, -1) scale(1, -1); */
+    color: black;
+    transform: scale(1, -1) scale(1, -1);
 }
 
 footer {
