--- a/style.css
+++ b/style.css
@@ -27,11 +27,11 @@ body {
     width: fit-content;
     max-width: 90vw;
     height: fit-content;
+    /* color: white; */
 }
 
 #welcome>figure>h1 {
     font-style: italic;
-    color: white;
 }
 
 #welcome>figure>h4 {
@@ -45,30 +45,40 @@ body {
     opacity: 0;
 }
 .fadeIn2 {
-    transition: all 1.25s ease-in-out;
+    transition: all 1s ease-in-out;
     opacity: 0;
 }
 .fadeIn3 {
-    transition: all 2s ease-in-out;
+    transition: all 2.5s ease-in-out;
     opacity: 0;
     color: white;
     font-size: 0rem;
+}
+.fadeIn4 {
+    transition: all 2.5s ease-in-out;
+    color: black;
 }
 
 .fadeIn1.show {
     margin-top: 15vh;
     border: 1px solid lime;
+    box-shadow:lime;
     opacity: 1;
 }
 .fadeIn2.show {
     opacity: 1;
+    color: white;
 }
 
 .fadeIn3.show {
     opacity: 1;
     font-size: 100%;
-    color: black;
+    color: lime;
     transform: scale(1, -1) scale(1, -1);
+}
+
+.fadeIn4.show {
+    color: lime;
 }
 
 footer {
