--- a/style.css
+++ b/style.css
@@ -22,11 +22,12 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 #welcome {
     display: block;
-    padding: 1rem;
+    padding: -10vh 1rem 1rem 1rem;
     margin-bottom: 20vh;
     text-align: center;
     align-content: center;
@@ -43,12 +44,8 @@ body {
 #welcome>figure>h4 {
     color: black;
     font-weight: bolder;
-    background: repeating-linear-gradient(
-  45deg,
-  gray,
-  gray 10px,
-  darkkhaki 10px,
-  darkkhaki 20px);
+    background: repeating-linear-gradient(45deg, gray, gray 10px, darkkhaki 10px,
+darkkhaki 20px);
 }
 
 /* .fadeIn1 {
@@ -216,10 +213,10 @@ footer {
     0% {
         opacity: 0;
     }
-    79% {
+    80% {
         opacity: 0;
     }
-    80% {
+    90% {
         transform: scale(1);
     }
     100% {
