--- a/style.css
+++ b/style.css
@@ -17,22 +17,26 @@ html {
 }
 
 body {
-    /* background-color: transparent; */
+    background-color: transparent;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 100vh;
 }
 
 #welcome {
     display: block;
-    padding: -10vh 1rem 1rem 1rem;
-    margin-top: -20vh;
+    margin-top: 2rem;
     text-align: center;
     align-content: center;
     width: fit-content;
     height: min-content;
+    justify-content: center;
+}
+
+#welcome>figure {
+    padding: 0 1rem 0 1rem;
 }
 
 footer {
