--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     background-color: transparent;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
     height: 100vh;
 }
