added media query for welcome height

--- a/style.css
+++ b/style.css
@@ -20,19 +20,25 @@ body {
     background-color: transparent;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
+    justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
 #welcome {
     display: block;
-    margin-top: 2rem;
+    margin-top: -30vh;
     text-align: center;
     align-content: center;
     width: fit-content;
     height: min-content;
     justify-content: center;
+}
+
+@media (max-height:360px) {
+    #welcome {
+        margin-top: 1rem;
+    }
 }
 
 #welcome>figure {
