--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    background-image: url("./pics/construction.jpg");
+    background-image: url("../pics/construction.jpg");
     /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./pics/construction.jpg"); */
 }
 
