--- a/css/construction.css
+++ b/css/construction.css
@@ -5,11 +5,10 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    background-image: url("../pics/construction.jpg");
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../pics/construction.jpg"); */
 }
 
 html {
+    background-image: url("../pics/construction.jpg");
     background-color: black;
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
@@ -17,17 +16,17 @@ html {
 }
 
 body {
-    background-color: transparent;
+    /* background-color: transparent; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     height: 100vh;
 }
 
 #welcome {
     display: block;
-    margin-top: -30vh;
+    margin-top: 5vh;
     text-align: center;
     align-content: center;
     width: fit-content;
@@ -46,14 +45,13 @@ body {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
     gap: 1rem;
     color: white;
+    animation: articleFadeIn 5.5s ease-in-out;
 }
 
 #gitLogo {
@@ -76,11 +74,11 @@ footer {
         margin-top: -50vh;
     }
     30% {
-        margin-top: 25;
+        margin-top: 10;
         transform: scaleY(90%);
     }
     65% {
-        margin-top: 50vh;
+        margin-top: 20vh;
         transform: scaleY(80%);
     }
     85% {
@@ -226,3 +224,51 @@ darkkhaki 20px);
     }
 }
 /* Welcome Animations Above */
+
+/* Article CSS Below */
+#article1 {
+    animation: articleFadeIn 5.5s ease-in-out;
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 0.25rem;
+    background-color: black;
+}
+@keyframes articleFadeIn {
+    0% {
+        opacity: 0;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+#article1>h2 {
+    padding: 0.5rem;
+    color: white;
+    font-style: italic;
+    text-align: center;
+    text-decoration: underline;
+}
+
+#article1>p {
+    padding: 0.5rem;
+    color: silver;
+}
+
+#article1>ol {
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    color: white;
+}
+
+#article1>ol>li {
+    margin-bottom: 1rem;
+}
+
+a,a:link,a:visited {
+    color: lime;
+    text-decoration: none;
+}
