better colors for article1

--- a/css/construction.css
+++ b/css/construction.css
@@ -261,7 +261,7 @@ darkkhaki 20px);
 
 #article1>ol {
     padding: 1rem 1.5rem 1rem 1.5rem;
-    color: white;
+    color: silver;
 }
 
 #article1>ol>li {
