--- a/css/construction.css
+++ b/css/construction.css
@@ -233,6 +233,7 @@ darkkhaki 20px);
     border: 1px solid black;
     border-radius: 0.25rem;
     background-color: black;
+    max-width: 1280px;
 }
 @keyframes articleFadeIn {
     0% {
