--- a/css/construction.css
+++ b/css/construction.css
@@ -13,6 +13,8 @@ html {
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
     width: 100%;
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 body {
