--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,12 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    background-image: url("../pics/pharm2code_tilt.jpg");
 }
 
 html {
+    background-image: url("../pics/pharm2code_tilt.jpg");
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     background-color: black;
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
