welcome footer position

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@ body {
 }
 
 footer {
+    position: absolute;
+    bottom: 0px;
     display: flex;
     flex-direction: row;
     justify-content: center;
