welcome css and footer

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -45,8 +45,8 @@ body {
 }
 
 footer {
-    position: absolute;
-    bottom: 0px;
+    /* position: absolute; */
+    /* bottom: 0px; */
     display: flex;
     flex-direction: row;
     justify-content: center;
