--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,12 +2,19 @@
     width: 100%;
     height: 2rem;
 }
+
 .navbar-nav {
     display: flex;
     width: 100%;
     justify-content: space-evenly;
 }
+
 .navbar-nav li {
     display: inline-block;
     float:none;
+}
+
+.navbar-toggler {
+    border: none;
+    background-color: transparent;
 }
