--- a/css/introanimations.css
+++ b/css/introanimations.css
@@ -28,7 +28,7 @@
     padding-bottom: 1rem;
 }
 .animationSlideFromLeft>:nth-child(2) {
-    color: black;
+    color: #00857c;
 }
 @keyframes animationSlideFromLeft {
     0% {
@@ -82,10 +82,10 @@
 }
 @keyframes animationTurnGreen {
     0% {
-        color: black;
+        color: #00857c;
     }
     89% {
-        color: black;
+        color: #00857c;
         font-size: 2rem;
     }
     90% {
@@ -140,7 +140,7 @@
     text-align: center;
     animation: animationFlipIn 4.75s ease-in-out;
     border-radius: .125rem;
-    color: white;
+    color: silver;
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
