--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,12 +9,21 @@
     justify-content: space-evenly;
 }
 
-.navbar-nav li {
+.navbar-nav>li>a {
     display: inline-block;
-    float:none;
+    /* color: lime !important; */
+
 }
 
 .navbar-toggler {
     border: none;
     background-color: transparent;
+}
+
+.navbar-collapse {
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../pics/pharm2code_tilt.jpg");
+    border-radius: 0.25rem;
+    padding-left: 1rem;
+    height: fit-content;
 }
