--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,7 +11,6 @@
 
 .navbar-nav>li>a {
     display: inline-block;
-    /* color: lime !important; */
 
 }
 
@@ -26,4 +25,8 @@
     border-radius: 0.25rem;
     padding-left: 1rem;
     height: fit-content;
+}
+
+.nav-link:hover {
+    border-bottom: 1px solid lime;
 }
