--- a/css/navbar.css
+++ b/css/navbar.css
@@ -30,3 +30,16 @@
 .nav-link:hover {
     border-bottom: 1px solid lime;
 }
+
+.navbar-toggler>img {
+    animation: logoWiggle 5s ease-in-out;
+    animation-iteration-count: infinite;
+}
+
+@keyframes logoWiggle {
+    0% { transform: rotate(0deg); }
+   96% { transform: rotate(0deg); }
+   97% { transform: rotate(10deg); }
+   99% { transform: rotate(-10deg); }
+  100% { transform: rotate(0deg); }
+}
