--- a/css/blog.css
+++ b/css/blog.css
@@ -30,12 +30,12 @@ footer {
     color: white;
 }
 
-#gitLogo {
+.socialLogo {
     max-height: 1.5rem;
     transition: transform 0.5s ease-in-out;
 }
 
-#gitLogo:hover {
+.socialLogo:hover {
     transform: scale(-1, 1) scale(1);
 }
 
