--- a/css/welcome.css
+++ b/css/welcome.css
@@ -53,12 +53,12 @@ footer {
     color: white;
 }
 
-#gitLogo {
+.socialLogo {
     max-height: 1.5rem;
     transition: transform 0.5s ease-in-out;
 }
 
-#gitLogo:hover {
+.socialLogo:hover {
     transform: scale(-1, 1) scale(1);
 }
 
