--- a/css/about.css
+++ b/css/about.css
@@ -48,6 +48,7 @@ footer {
     background-color: black;
     width: fit-content;
     max-width: 1280px;
+    line-height: 1.6;
 }
 @media (max-width:1400px) {
     #article1 {
