--- a/css/experience.css
+++ b/css/experience.css
@@ -48,6 +48,7 @@ footer {
     background-color: black;
     width: 90vw;
     max-width: 1280px;
+    line-height: 1.6;
 }
 @media (max-width:1400px) {
     .myArticles {
