--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,7 +11,6 @@
 
 .navbar-nav>li>a {
     display: inline-block;
-
 }
 
 .navbar-toggler {
@@ -27,8 +26,14 @@
     height: fit-content;
 }
 
+.nav-link {
+    transition: all 0.5s ease-in-out;
+    font-family: menlo;
+}
+
 .nav-link:hover {
     border-bottom: 1px solid lime;
+    margin-bottom: -1px;
 }
 
 .navbar-toggler>img {
