--- a/css/projects.css
+++ b/css/projects.css
@@ -82,6 +82,12 @@ h1, h5 {
     border-radius: 0.25rem;
 }
 
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 .btn {
     border-color: dimgray;
     background-color: dimgray;
