--- a/css/navbar.css
+++ b/css/navbar.css
@@ -34,6 +34,7 @@
 .nav-link:hover {
     border-bottom: 1px solid lime;
     margin-bottom: -1px;
+    color: lime !important;
 }
 
 .navbar-toggler>img {
