--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@
     font-family: 'Menlo Regular';
     font-style: normal;
     font-weight: normal;
-    src: local('Menlo Regular'), url('./libraries/Menlo-Regular.woff') format('woff');
+    src: local('Menlo Regular'), url('../libraries/Menlo-Regular.woff') format('woff');
     }
 
 *, *::before, *::after {
