--- a/css/global.css
+++ b/css/global.css
@@ -21,7 +21,7 @@ html {
 body {
     background-color: transparent;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 footer {
