--- a/css/blog.css
+++ b/css/blog.css
@@ -9,10 +9,38 @@ html {
 body {
     background-color: transparent;
     align-items: center;
+    color: silver;
 }
 
-/* Article CSS Below */
-#article1 {
+h2 {
+    padding: 0.5rem;
+    color: white;
+    font-style: italic;
+    text-align: center;
+    text-decoration: underline;
+}
+
+h6 {
+    font-family: Menlo Regular;
+    color: #00857c;
+}
+p {
+    padding: 0.125rem;
+    color: silver;
+}
+
+ol {
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    color: silver;
+}
+
+a,a:link,a:visited {
+    color: lime;
+    text-decoration: none;
+}
+
+/* Blog CSS Below */
+.myBlog {
     margin: 1rem auto;
     padding: 1rem;
     border: 1px solid black;
@@ -23,34 +51,11 @@ body {
     line-height: 1.6;
 }
 @media (max-width:1400px) {
-    #article1 {
+    .myBlog {
         margin: 1rem 5vw;
     }
 }
 
-#article1>h2 {
-    padding: 0.5rem;
-    color: white;
-    font-style: italic;
-    text-align: center;
-    text-decoration: underline;
-}
-
-#article1>p {
-    padding: 0.5rem;
-    color: silver;
-}
-
-#article1>ol {
-    padding: 1rem 1.5rem 1rem 1.5rem;
-    color: silver;
-}
-
-#article1>ol>li {
-    margin-bottom: 1rem;
-}
-
-a,a:link,a:visited {
-    color: lime;
-    text-decoration: none;
+.myBlog>div {
+    padding: 1rem;
 }
