--- a/css/blog.css
+++ b/css/blog.css
@@ -13,7 +13,7 @@ body {
 }
 
 h2 {
-    padding: 0.5rem;
+    padding-block: 0.5rem;
     color: #00857c;
     font-style: italic;
     text-align: center;
@@ -26,7 +26,7 @@ h6 {
     color: #00857c;
 }
 p {
-    padding: 0.125rem;
+    padding-block: 0.125rem;
     color: silver;
 }
 
@@ -64,4 +64,11 @@ a,a:link,a:visited {
 .accordion-item,.accordion-header,.accordion-collapse,.accordion-body,.accordion-button {
     background-color: transparent;
     text-decoration: none;
+}
+
+@media (max-width:540px) {
+    .col-sm-4>p,.col-sm-6>p,.col-sm-8>p,ol>li {
+        margin-left: -2rem;
+        margin-right: -3rem;
+    }
 }
