--- a/css/experience.css
+++ b/css/experience.css
@@ -32,6 +32,13 @@ body {
     }
 }
 
+.myArticles>div>div>h3>img {
+    width: 20vw;
+    min-width: 5rem;
+    max-width: 10rem;
+    margin-right: 5vw;
+}
+
 h1, h2, h3, h4, .h3 {
     color: #00857c;
     text-align: start;
