--- a/css/blog.css
+++ b/css/blog.css
@@ -43,13 +43,14 @@ a,a:link,a:visited {
 
 /* Blog CSS Below */
 .myBlog {
-    margin: 1rem auto;
+    margin: 1rem;
     border: 1px solid black;
-    border-radius: 0.25rem;
+    /* border-radius: 0.25rem; */
     background-color: black;
-    width: fit-content;
-    max-width: 1280px;
-    min-width: 90vw;
+    /* width: fit-content; */
+    width: 90vw;
+    max-width: 960px;
+    /* min-width: 90vw; */
     line-height: 1.6;
 }
 @media (max-width:1400px) {
