nav logo hover paranthesis

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -45,6 +45,13 @@
 .navbar-toggler>img {
     animation: logoWiggle 5s ease-in-out;
     animation-iteration-count: infinite;
+    transition: 0.5s ease-in-out;
+    border: 2px solid transparent;
+}
+.navbar-toggler>img:hover {
+    border-left: 2px solid lime;
+    border-right: 2px solid lime;
+    border-radius: 100%;
 }
 
 @keyframes logoWiggle {
