--- a/css/navbar.css
+++ b/css/navbar.css
@@ -58,9 +58,11 @@
     }
     1% { 
         transform: rotate(10deg); 
+        padding: 0;
     }
     2% { 
         transform: rotate(-10deg); 
+        padding: 0;
     }
     3% { 
        transform: rotate(0deg); 
