--- a/css/global.css
+++ b/css/global.css
@@ -33,8 +33,28 @@ footer {
     color: white;
 }
 
+footer>a, footer>p {
+    margin: auto 0;
+}
+
 footer>p>span {
     font-style: italic;
+}
+
+footer>p>img {
+    animation: slowSpin 5s ease-in-out infinite;
+}
+
+@keyframes slowSpin {
+    0% { 
+        transform: scale(1); 
+    }
+    50% {
+        transform: scale(-1, 1);
+    }
+    100% { 
+        transform: scale(1); 
+    }
 }
 
 .socialLogo {
