--- a/css/projects.css
+++ b/css/projects.css
@@ -15,6 +15,7 @@ h1 {
     color: white;
     font-family: Menlo Regular;
     text-align: center;
+    text-shadow: 1px 1px black;
 }
 
 h3 {
@@ -67,6 +68,10 @@ h5 {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+}
+
+.card-text>span {
+    color: white;
 }
 
 .btn {
